--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@ body {
 }
 
 .grid-holder {
-    height: 80%;
-    width: 80%;
+    height: 80vh;
+    width: auto;
+    margin-top: 10vh;
     display: flex;
+    flex: 1;
     flex-direction: column;
+    border: 2px solid black;
 }
