Styled input element

--- a/style.css
+++ b/style.css
@@ -27,3 +27,10 @@ body {
 .colored {
     background-color: black;
 }
+
+.input {
+    margin-top: 10px;
+    justify-self: center;
+    font-size: larger;
+    font-weight: bold;
+}
