--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .grid-holder {
     height: 80vh;
     width: 80vh;
-    margin-top: 10vh;
+    margin-top: 2vh;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
@@ -32,4 +32,9 @@ body {
     justify-self: center;
     font-size: larger;
     font-weight: bold;
+}
+
+#clear {
+    margin-left: 20px;
+    padding: 10px;
 }
